updated html and css.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <!-- IG Link -->
             <li>
                 <a href="https://www.instagram.com/von_thebarber?igsh=OG85bzR0NWhwaWxk" target="_blank">
-                    <img src="Images/IGLogo.webp" alt="Instagram" style="width: 50px; height: 50px; border-radius: 10px;"/>
+                    <img class="ig-logo" src="Images/IGLogo.webp" alt="Instagram"/>
                 </a>
             </li>
         </ul>     
@@ -90,7 +90,7 @@
                     <source src="Videos/hair_cuting.mp4" type="video/mp4">
                 </video>
             </div>
-            <p id="popup-paragraph" class="popup-text">Enjoy your video! Book your appointment with us today for a premium grooming experience.</p>
+            <p id="popup-paragraph" class="popup-text">Book your appointment with us today for a premium grooming experience.</p>
             <a href="https://app.thecut.co/barbers/VTBcuts" class="book-button">Book Now</a>
         </div>
     </div>
