uypdated css and js

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <!-- Second Column -->
             <div class="slide-column">
                 <div class="img-container">
-                    <img src="Images/cut3.jpg" alt="Cut 3" loading="lazy">
+                    <img class="image3" src="Images/cut3.jpg" alt="Cut 3" loading="lazy">
                 </div>
                 <div class="img-container">
                     <img src="Images/cut4.jpg" alt="Cut 4" loading="lazy">
@@ -52,6 +52,7 @@
     </section>
     <!-- Main Section -->
     <main class="main-section">
+        <h1 class="von-title">Von The Barber</h1>
         <div class="main-container">
             <div class="left-column">
                 <img class="von-image" src="Images/von_image.jpg" alt="Barber Shop Image" loading="lazy">
@@ -68,14 +69,14 @@
       <!-- Footer Section -->
       <footer class="footer-section">
         <ul class="footer-list">
-            <li class="underline"><a  href="#">Shave BarberShop:</a></li>
-            <li><a href="#">1912 Washington Ave. Sain Louis, MO 63103</a></li>
-            <li class="underline"><a href="#">Cell: 314-580-3474</a></li>
-            <li class="underline"><a href="#">Shop: 314-367-4283</a></li>
+            <li class="underline">Shave BarberShop:</li>
+            <li>1912 Washington Ave. Sain Louis, MO 63103</li>
+            <li class="underline">Cell: 314-580-3474</li>
+            <li class="underline">Shop: 314-367-4283</li>
             <!-- IG Link -->
             <li>
                 <a href="https://www.instagram.com/von_thebarber?igsh=OG85bzR0NWhwaWxk" target="_blank">
-                    <img class="ig-logo" src="Images/IGLogo.webp" alt="Instagram"/>
+                    <img class="ig-logo" src="Images/InstagramLogo.avif" alt="Instagram"/>
                 </a>
             </li>
         </ul>     
@@ -84,16 +85,16 @@
        <div id="popup" class="popup">
         <div class="popup-content">
             <h2>Book With Von Master Barber!</h2>
-            <h3>Experience The Barbering Yourself.</h3>
+            <h3>Experience For Yourself!</h3>
             <div class="video-container">
-                <video autoplay loop>
+                <video autoplay loop muted>
                     <source src="Videos/hair_cuting.mp4" type="video/mp4">
                 </video>
             </div>
-            <p id="popup-paragraph" class="popup-text">Book your appointment with us today for a premium grooming experience.</p>
+            <p id="popup-paragraph" class="popup-text">Book your appointment today for a premium grooming experience.</p>
             <a href="https://app.thecut.co/barbers/VTBcuts" class="book-button">Book Now</a>
         </div>
     </div>
-    <script src="JavaScript/index.js"></script>
+   <script src="JavaScript/index.js"></script>
 </body>
 </html>
